--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content" class="text-red-500 bg-slate-900">Hello!</div>
     <script src="main.js"></script>
 </body>
 </html>
