--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    <div id="content" class="text-red-500 bg-slate-900">Hello!</div>
+    <div id="content" class="text-blue-400 bg-slate-900">Hello!</div>
     <script src="main.js"></script>
 </body>
 </html>
