--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,15 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    <div id="content" class="h-full">
-        <div id="header" class="h-24 flex flex-col justify-center items-center bg-slate-800">
-            <p class="text-white text-3xl font-serif">Ristorante Italiano</p>
-            <div class="flex text-slate-300">
-                <div>Home</div>
-                <div>Menu</div>
-                <div>Contact</div>
+    <div id="content" class="h-full bg-cover bg-center" style="background-image: url('/src/imgs/pexels-pixabay-326333.jpg')">
+        <div id="header" class="h-30 flex flex-col justify-center items-center">
+            <div class="">
+                <p class="text-white text-4xl font-serif font-bold italic my-4">RISTORANTE ITALIANO</p>
+                <div class="flex justify-center gap-2 pb-3">
+                    <button class="bg-white text-slate-900 px-2 py-1 rounded-full">Home</button>
+                    <button class="bg-white text-slate-900 px-2 py-1 rounded-full">Menu</button>
+                    <button class="bg-white text-slate-900 px-2 py-1 rounded-full">Contact</button>
+                </div>
             </div>
         </div>
         <div id="home-content" class="flex flex-col">
