--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    <div id="content">
+    <div id="content" class="">
     </div>
     <script src="main.js"></script>
 </body>
